# sovereign-tee-core

./: Cargo.toml  README.md  e2e_test.sh
docs/: api_reference.md  contract_layer.md
move/sovereign_dao/: Move.toml
move/sovereign_dao/sources/: dao.move
move/sovereign_dao/tests/: dao_tests.move
src/: dao.rs  lib.rs  main.rs  pss.rs  scalar_utils.rs  sharding.rs  sui_utils.rs  tee_service.rs  tests.rs
