[package]
name = "sovereign-tee-core"
version = "0.1.0"
edition = "2021"
description = "Sovereign DAO Gateway Core - TEE/MPC Vault logic"

[dependencies]
# --- Core Dependencies (Resolved from Ika Workspace) ---
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
bcs = "0.1"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
clap = { version = "4.4", features = ["derive"] }
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa", "arithmetic", "serde"] }

# --- Upstream Ika Dependencies (Git) ---
# We point to the specific commit of Ika to ensure compatibility
dwallet-mpc-types = { git = "https://github.com/dwallet-labs/ika.git", rev = "e8b5239f27538e8fb8dc4ac593704e0ec7105ab6" }
dwallet-mpc-centralized-party = { git = "https://github.com/dwallet-labs/ika.git", rev = "e8b5239f27538e8fb8dc4ac593704e0ec7105ab6" }

# --- Inkrypto Dependencies (From Ika Workspace) ---
# Using the revisions defined in Ika's Cargo.toml
mpc = { git = "https://github.com/dwallet-labs/inkrypto", rev = "abd7f010" }
twopc_mpc = { git = "https://github.com/dwallet-labs/inkrypto", rev = "abd7f010" }
group = { git = "https://github.com/dwallet-labs/inkrypto", features = ["os_rng"], rev = "abd7f010" }
commitment = { git = "https://github.com/dwallet-labs/inkrypto", rev = "abd7f010" }
class_groups = { git = "https://github.com/dwallet-labs/inkrypto", rev = "abd7f010", features = ["threshold"] }

# --- Sui / FastCrypto Dependencies ---
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "4db0e90c732bbf7420ca20de808b698883148d9c" }

[dev-dependencies]
rand = "0.8"

# Isolate from parent workspace
[workspace]
